# prpcrtt-stm32

./: .gitignore
host/: Cargo.toml
host/src/: impls.rs  main.rs
icd/src/: lib.rs
rp2040/: Cargo.toml  memory.x
rp2040/.cargo/: config.toml
rp2040/src/: app.rs  handlers.rs  impls.rs  main.rs
