[package]
name = "template-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
embassy-executor        = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-rp              = { version = "0.2.0", features = ["rp2040", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-sync            = { version = "0.6.0", features = [] }
embassy-time            = { version = "0.3.2", features = [] }
embassy-usb             = { version = "0.3.0", features = [] }
postcard-rpc            = { version = "0.11.0",   features = ["embassy-usb-0_3-server"] }
postcard                = { version = "1.1.0" }
postcard-schema         = { version = "0.2.0", features = ["derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt             = "0.7.0"
static_cell             = "2.1"
template-icd            = { path = "../icd" }
panic-reset = "0.1.1"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
cobs = { version = "0.2.3", default-features = false }

[dependencies.rtt-target]
# path = "../vendor/rtt-target/rtt-target"
version = "0.6.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-rp           = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-usb          = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-usb-driver   = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
