[package]
name = "template-rp2040"
version = "0.1.0"
edition = "2021"

[dependencies]
# cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
cortex-m                = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }

embassy-executor        = { version = "0.6.0", features = ["task-arena-size-8192", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-stm32           = { version = "0.1.0", features = [ "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
embassy-sync            = { version = "0.6.2", features = [] }
embassy-time            = { version = "0.3.2", features = [] }
postcard-rpc            = { version = "0.11.0" }
postcard                = { version = "1.1.0" }
postcard-schema         = { version = "0.2.0", features = ["derive"] }
portable-atomic         = { version = "1.6.0", features = ["critical-section"] }
cortex-m-rt             = "0.7.0"
static_cell             = "2.1"
template-icd            = { path = "../icd" }
panic-reset = "0.1.1"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
cobs = { version = "0.2.3", default-features = false }

[dependencies.rtt-target]
# path = "../vendor/rtt-target/rtt-target"
version = "0.6.1"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
codegen-units = 1
# incremental = false

[profile.ci]
inherits = "dev"
debug = false
strip = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 256
rpath = false

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
embassy-stm32        = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
